Fix horizontal overflow on mobile

--- a/src/css/hero.less
+++ b/src/css/hero.less
@@ -62,8 +62,7 @@
 
 @media (max-width: @screen-sm) {
   .hero {
-    margin-left: -15px;
-    margin-right: -15px;
+    padding: 0;
     > img {
       .img-responsive();
     }
