--- a/src/css/navbar.less
+++ b/src/css/navbar.less
@@ -117,7 +117,6 @@
     }
 
     ul.social {
-      margin-right: -23px;
       > li > a {
         padding-left: 8px;
         padding-right: 8px;
